Fixed colour contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ h1 {
   display: block;
   padding: .75em;
   text-decoration: none;
-  color: #fff;
+  color: #282828;
   background-color: #f0746c;
 }
 
@@ -99,6 +99,8 @@ h1 {
 
 .banner-btn {
   background-color: #f0746c;
+  color: #282828;
+  text-shadow: 0 0 0;
   border: 3px solid #e7423c;
   border-radius: 20px;
 }
@@ -167,7 +169,7 @@ h2 {
   bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
-  color: #fff;
+  color: #282828;
   text-align: center;
 }
 
@@ -239,7 +241,6 @@ footer p {
     margin: .45em .25em .25em .1em;
     padding: .75em;
     text-decoration: none;
-    color: #fff;
     background-color: #f0746c;
     border-radius: 10px;
   }
